style.css
body {
	text-align: center;
	font-family: 'Oswald', san-serif;
}

#title {
	font-size: 3em;
}

#stats, #message, #score{
	margin-bottom: 1em;
}

#message {
	height: 25px;
}


#gameboard {
	width:90%;
	max-width:33em;
	max-height:33em;
	margin: 0 auto;
	clear:both;
}

h3 {
	display:inline;
}

div, p {
	width:10em;
	height:10em;
	display: inline-block;
	margin:-2px;
}

div.corner {
	border-style: none solid solid none;
}

div.horizontal {
	border-bottom-style:solid;
}

div.vertical {
	border-right-style:solid;
}

div#currentPlayer, div#winningPlayer {
	width:2em;
	height:2em;
	/*background-image:url('images/circle.png');*/
	background-size: 100%;
	background-repeat:no-repeat;
	background-position: center;
	margin-bottom:-10px;
}

div.center {
	width:6em;
	height:6em;
	/*background-image:url('images/circle.png');*/
	margin-top: 2em;
	background-repeat:no-repeat;
}


.cross {
	background-image:url('images/x.png');
}

.circle {
	background-image:url('images/circle.png');
}

button {
	margin-top: 5em;
}

.hidden {
	display:none;
}

#secondText, #firstText {
	width: auto;
}

body.dark{
	background-color:rgba(0,0,5,.9);
	color: white;
}
div.center.dark, div#currentPlayer.dark, div#winningPlayer.dark, div#player1.dark {
	background-image:url('images/xyellow.png');
}

#title {
	display: inline-block;
}

#player1{
	float:left;
	margin-left: 20%;
}

#player2{
	float:right;
	margin-right:20%;
}

#p1score {
	float:left;
	width:auto;
	height:auto;
}

#p2score{
	float:right;
	width:auto;
	height:auto;
}

#player1, #player2 {
	height: 2em;
	width: 2em;
	background-size: 100%;
	background-repeat:no-repeat;
	background-position: center;
}

#colon1, #colon2{
	position:relative;
	width:auto;
	height:auto;
	top: 0.2em;
}

#p1score, #p2score {
	position:relative;
	top: 0.2em;
	font-family: sans-serif;
	font-size: 1.3em;
}

#colon1, #p1score {
	left:1.2em;
}

#colon2, #p2score {
	right:1.2em;
}

